--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>vertx-parent</artifactId>
-    <version>3.0.0-dev_preview1</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>vertx-docgen</artifactId>
-  <version>3.0.0-dev_preview1</version>
+  <version>3.0.0-SNAPSHOT</version>
 
   <properties>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
