--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>vertx-docgen</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0-milestone5</version>
 
   <properties>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
