--- a/test-proj/pom.xml
+++ b/test-proj/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-docgen</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.4.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
@@ -85,6 +85,7 @@
               <configuration>
                 <compilerArgs>
                   <arg>-Adocgen.output=${project.build.directory}/asciidoc</arg>
+                  <arg>-Adocgen.source=${project.basedir}/src/main/asciidoc/doc.adoc</arg>
                 </compilerArgs>
               </configuration>
             </execution>
