--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>vertx-docgen</artifactId>
-  <version>3.4.2</version>
+  <version>3.5.0-SNAPSHOT</version>
 
   <properties>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
