--- a/vertx-docgen-api/pom.xml
+++ b/vertx-docgen-api/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>vertx-docgen-parent</artifactId>
-    <version>0.9.9-SNAPSHOT</version>
+    <version>0.9.9</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
